Fixed Attractions IMages

--- a/attractions.html
+++ b/attractions.html
@@ -57,7 +57,7 @@
         of Fiordland National Park, Milford Sound offers some of the world’s most staggering coastal scenery with its dramatic
         peaks and dark blue waters. The area’s frequent downpours only enhance this South Island beauty, sending numerous waterfalls
         cascading down the cliffs.</p>
-        <img src="img/att1.JPG" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+        <img src="img/att1.jpg" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
         <hr>
         <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:38px;">Bay of Islands</h1>
         <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -65,7 +65,7 @@
           many secluded bays and some great sandy beaches. This beautiful bay has an abundance of marine life including whales,
           penguins, dolphins and the big marlin. Not surprisingly, it is a popular tourist spot for sailing yachts on world cruises
           and international sport fishermen.</p>
-          <img src="img/att2.JPG" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+          <img src="img/att2.jpg" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
           <hr>
           <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:38px;">Tongariro Alpine Crossing</h1>
           <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -74,7 +74,7 @@
             be recognizable to film buffs, because scenes from the Lord of the Rings Trilogy were filmed there. The Blue and Emerald
             Lakes are major scenic attractions along the way, and both have historic significance to the local Maori people and
             should therefore be treated with the utmost respect.</p>
-            <img src="img/att3.JPG" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+            <img src="img/att3.jpg" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
             <hr>
             <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:38px;">Wai-o-tapu</h1>
             <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -83,14 +83,14 @@
               At Wai-o-tapu, one of the highlights is the Lady Knox Geyser, which erupts daily with a show-stopping display straight
               up into the air. Nearby, geothermal spas give you the perfect place to unwind after a day of hiking along Wai-o-tapu’s
               volcanic trekking paths.</p>
-              <img src="img/att4.JPG" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+              <img src="img/att4.jpg" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
               <hr>
               <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:38px;">Franz Josef Glacier</h1>
               <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
                 This glacier, located within Westland National Park in the southwest, is one of the world’s most accessible. Visitors can
                 walk right up to the foot of the massive glacier or take a helicopter ride over the dazzling Ice Age remnant. Together
                 with Fox Glacier it is one of South Westland’s major drawcards for tourists.</p>
-                <img src="img/att5.JPG" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+                <img src="img/att5.jpg" alt="New Zealand Attraction" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
               </div>
             </div>
 
