Fixed History Images

--- a/history.html
+++ b/history.html
@@ -59,7 +59,7 @@
         statement of principles upon which the British officials and Māori chiefs made a political compact or covenant to found
         a nation state and build a government in New Zealand to deal with pressing new circumstances. Like many treaties, it
         is an exchange of promises between the parties to it.</p>
-        <img src="img/treaty.JPEG" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+        <img src="img/treaty.jpeg" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
         <hr>
         <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:38px;">What does the Treaty say?</h1>
         <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -69,7 +69,7 @@
             statement of principles upon which the British officials and Māori chiefs made a political compact or covenant to found
             a nation state and build a government in New Zealand to deal with pressing new circumstances. Like many treaties, it
             is an exchange of promises between the parties to it.</p>
-            <img src="img/treaty2.JPEG"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+            <img src="img/treaty2.jpeg"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
             <hr>
             <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:38px;">Why are there Treaty of Waitangi claims?</h1>
             <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -82,7 +82,7 @@
                 of the Treaty and to make recommendations to government to remove the prejudice and provide recompense. Since 1985
                 the tribunal has been able to consider Crown acts and omissions dating back to 1840. This has provided Māori with an
                 important means to have their grievances against the actions of past governments investigated.</p>
-                <img src="img/treaty3.JPG" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
+                <img src="img/treaty3.jpg" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;">
             </div>
         </div>
 
