Attempt of ICO Fix 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <!-- links -->
 
-  <link rel="icon" type="image/png" href="img/kiwi.ico" sizes="32x32">
+  <!-- <link rel="icon" type="image/png" href="img/kiwi.ico" sizes="32x32"> -->
+  <link rel="shortcut icon" href="https://garlotch.github.io/img/kiwi.ico" />
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
