Minor Fixes/Changes + Home-Page Complete Revamp

--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
 
     <!-- links -->
 
-    <link rel="icon" type="image/png" href="img/kiwi.ico" sizes="32x32">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" type="text/css" href="css/even-bg.css">
@@ -67,7 +67,7 @@
                     Queenstown loves a good laugh - so much so that we needed to repeat the show for a second night!
                     Enjoy the Real Journeys Friday Night Party & Fireworks, then come and join the stellar lineup of Jeremy Corbett, Paul Ego, Dai Henwood, Justine Smith, James Nokise and Sara Devcich.
                     Get your mates together and join in the fun!</p>
-                    <a target="_blank" href="https://www.eventfinda.co.nz/2017/comedy-night-friday-night/queenstown"><img src="img/event2.jpg"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
+                    <a target="_blank" href="https://www.eventfinda.co.nz/2017/comedy-night-friday-night/queenstown"><img src="img/event2.JPG"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
                     <hr>
                     <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:38px;"><a target="_blank" href="https://www.eventfinda.co.nz/2017/graeme-james-highways-tour-kumeu/auckland/kumeu">Graeme James Highways Tour</a></h1>
                     <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -77,7 +77,7 @@
                         Evidence of his endless hard work and hours spent on the road, Graeme started his musical journey busking on the streets of Wellington and sleeping in his trusty ‘Hotel Corona’. These stories and experiences have shaped his captivating and unmissable live show featuring electric fiddle, guitar, bass, baritone ukulele, beat boxing, harmonica, mandolin and his velveteen vocals all with the help of a trusty loop pedal.
                         Graeme’s last tour almost sold out completely nationwide, so get it quick to hear the songs you love, and a couple of newbies.
                         Please note that doors are open from 7pm, and the music will begin at 7.30pm.</p>
-                        <a target="_blank" href="https://www.eventfinda.co.nz/2017/graeme-james-highways-tour-kumeu/auckland/kumeu"><img src="img/event3.jpg" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
+                        <a target="_blank" href="https://www.eventfinda.co.nz/2017/graeme-james-highways-tour-kumeu/auckland/kumeu"><img src="img/event3.JPG" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
                         <hr>
                         <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:10px;"><a target="_blank" href="https://www.eventfinda.co.nz/2017/the-great-coalfire-rib-eating-race/queenstown-lakes">The Great Coalfire Rib Eating Race</a></h1>
                         <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -89,7 +89,7 @@
                             3rd prize $100 voucher for all Wai Dining Restaurants.
                             Fired up and delivering smoky hot flavours, Coalfire is a uniquely Queenstown dining experience with a meat orientated menu using locally grown produce off the hills and farms of the South Island.
                             Entry fee includes a t-shirt, whole rack of spicy ribs, 1 pint of lager, and a good time!</p>
-                            <a target="_blank" href="https://www.eventfinda.co.nz/2017/the-great-coalfire-rib-eating-race/queenstown-lakes"> <img src="img/event4.jpg"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
+                            <a target="_blank" href="https://www.eventfinda.co.nz/2017/the-great-coalfire-rib-eating-race/queenstown-lakes"> <img src="img/event4.JPG"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
                             <hr>
                             <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:10px;"><a target="_blank" href="https://www.eventfinda.co.nz/2017/the-music-of-strangers/auckland/titirangi">The Music of Strangers</a></h1>
                             <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -100,7 +100,7 @@
                                 It is one of the most moving films I have seen in a long time. Yo Yo Ma and the other members of the Silk Road Ensemble are not only brilliant musicians, they are inspirational human beings. Their passion for music and their ability to blend the music of different cultures is fully on display in the movie; sometimes their music filled me with joy; at other times it moved me to tears. The most moving scene for me was to see the two Syrian members of the Ensemble going into the Syrian refugee camps in Lebanon and Jordan and reaching out to the children their with their music and their message of hope. I defy anyone to watch it with dry eyes. Truly a movie for the times we are living in.
                                 If we get a good turn out then we plan to hold regular late night movies based around music and we already have a good selection of new release and old classic films waiting in the wings for the rest of 2017. Admission is a straight $12 and the bar will be open prior to the film screening, serving wine, beer and soft drinks, nibbles, ice cream and coffee also available.
                                 Tickets online and on the door.</p>
-                                <a target="_blank" href="https://www.eventfinda.co.nz/2017/the-music-of-strangers/auckland/titirangi"><img src="img/event5.jpg"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
+                                <a target="_blank" href="https://www.eventfinda.co.nz/2017/the-music-of-strangers/auckland/titirangi"><img src="img/event5.JPG"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
                                 <hr>
                                 <h1 class="cont-title" style="font-family: 'Raleway', sans-serif;font-size:2em;font-weight:bold;text-align:center;margin-bottom:35px;width:60%;margin-left:auto;margin-right:auto;margin-top:10px;"><a target="_blank" href="https://www.eventfinda.co.nz/2017/pacific-dance-festival-2017/auckland/mangere">Pacific Dance Festival 2017</a></h1>
                                 <p style="font-family: 'Raleway', sans-serif;font-size:1.2em;width:60%;margin-left:auto;margin-right:auto;">
@@ -121,14 +121,14 @@
                                     - Tamatoa Nights - featuring our male artists 
                                     - Double Bill featuring Le Moana and Jasmine Leota
                                     Running alongside the dance festival will also be an exhibition of Pacific dance costumes not to be missed. Get in and book today.</p>
-                                    <a target="_blank" href="https://www.eventfinda.co.nz/2017/pacific-dance-festival-2017/auckland/mangere"><img src="img/event6.jpg"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
+                                    <a target="_blank" href="https://www.eventfinda.co.nz/2017/pacific-dance-festival-2017/auckland/mangere"><img src="img/event6.JPG"" alt="New Zealand History" style="width:60%;display:block;border:2px solid black;margin-left:auto;margin-right:auto;text-align:center;box-shadow: 10px 10px 5px #888888;margin-top:42px;margin-bottom:42px;"></a>
                                 </div>
                             </div>
 
 
                             <nav class="navbar navbar-inverse navbar-fixed-bottom my-footer">
                               <div class="container-fluid">
-                                <p class="my-footer-text">&#169 Elliot B. G. Londt, 2017</p>
+                                <p class="my-footer-text">&#169; Elliot B. G. Londt, 2017</p>
                                 
                             </div>
                         </nav>
