--- a/index.html
+++ b/index.html
@@ -10,21 +10,15 @@
 
   <!-- links -->
 
-  <!-- <link rel="icon" type="image/png" href="img/kiwi.ico" sizes="32x32"> -->
-  <link rel="shortcut icon" href="https://garlotch.github.io/img/kiwi.ico" />
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="css/home-bg.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- other -->
 
   <title>Home | KiwiLand</title>
-
-  <style>
-    body{
-      background-image: url('img/background.jpg');
-    }
-  </style>
 
 </head>
 
@@ -63,128 +57,151 @@
       <footer class="blockquote-footer">Edmund Hillary</footer>
     </blockquote>
   </div>
+<hr>
+<div class="galHead">
+<p class="galHeadText">This is the KiwiLand Gallery!</p><br>
+<p class="galHeadText">Click on a picture, to see the full-resolution version!</p>
+</div>
+  <!-- Gallery Start -->
 
-  <!-- Carousel Start -->
-
-  <div id="myCarousel" class="elliot-carousel carousel slide" data-ride="carousel">
-    <!-- Indicators -->
- <!--  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
--->
-<!-- Wrapper for slides -->
-<div class="elliot-carousel-inner carousel-inner">
-
-  <div class="item active">
-    <a href="img/nz/original/1.jpg" target="_blank"><img src="img/nz/original/1.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/2.jpg" target="_blank"><img src="img/nz/original/2.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/3.jpg" target="_blank"><img src="img/nz/original/3.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/4.jpg" target="_blank"><img src="img/nz/original/4.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/5.jpg" target="_blank"><img src="img/nz/original/5.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/6.jpg" target="_blank"><img src="img/nz/original/6.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/7.jpg" target="_blank"><img src="img/nz/original/7.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/8.jpg" target="_blank"><img src="img/nz/original/8.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/9.jpg" target="_blank"><img src="img/nz/original/9.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/10.jpg" target="_blank"><img src="img/nz/original/10.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/11.jpg" target="_blank"><img src="img/nz/original/11.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/12.jpg" target="_blank"><img src="img/nz/original/12.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/13.jpg" target="_blank"><img src="img/nz/original/13.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/14.jpg" target="_blank"><img src="img/nz/original/14.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/15.jpg" target="_blank"><img src="img/nz/original/15.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/16.jpg" target="_blank"><img src="img/nz/original/16.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/17.jpg" target="_blank"><img src="img/nz/original/17.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/18.jpg" target="_blank"><img src="img/nz/original/18.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/19.jpg" target="_blank"><img src="img/nz/original/19.jpg" alt="NZ Photograph"></a>
-  </div>
-
-  <div class="item">
-    <a href="img/nz/original/20.jpg" target="_blank"><img src="img/nz/original/20.jpg" alt="NZ Photograph"></a>
-  </div>
+  <div class="container galCont">
+    <div class="row">
+    <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/1.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/1.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/2.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/2.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/3.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/3.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/4.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/4.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+    <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/5.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/5.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/6.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/6.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/7.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/7.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/8.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/8.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+    <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/9.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/9.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/10.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/10.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/11.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/11.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/12.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/12.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+    <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/13.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/13.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/14.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/14.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/15.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/15.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/16.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/16.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+    <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/17.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/17.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/18.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/18.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/19.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/19.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+      <div class="col-md-3 galCol">
+        <div class="thumbnail">
+          <a href="img/nz/original/20.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/20.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
+        </div>
+      </div>
+    </div>
 </div>
 
-<!-- Left and right controls -->
-<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-  <span class="glyphicon glyphicon-chevron-left"></span>
-  <span class="sr-only">Previous</span>
-</a>
-<a class="right carousel-control" href="#myCarousel" data-slide="next">
-  <span class="glyphicon glyphicon-chevron-right"></span>
-  <span class="sr-only">Next</span>
-</a>
-</div>
 
-<!-- Carousel End -->
+  <!-- Gallery End -->
 
-<nav class="navbar navbar-inverse navbar-fixed-bottom my-footer">
-  <div class="container-fluid">
-    <p class="my-footer-text">&#169 Elliot B. G. Londt, 2017</p>
-    
-  </div>
-</nav>
+  <!-- <a class="gallery-img" href="" target="img/nz/original/.jpg_blank"><img class="" src="img/nz/white-bars" alt="NZ Photograph"></a> - >
 
-<!-- <a ><button type="button" class="btn btn-primary btn-success btn-lg my-btn animated zoomIn ">Interactive Map</button></a> -->
+  <=a2 class="navbar navbar-inverse navbar-fixed-bottom my-footer">
+    <div class="container-fluid">
+      <p class="my-footer-text">&#169; Elliot B. G. Londt, 2017</p>
+    </div>
+  </nav>
 
-<!-- <h1>ok, now make a way of clicking on a button to scroll down, or link to something, or even an emmbedded panel, but the end result is: <b>we want to implement the MAP as SOON as possible! So get onto it!</b></h1> -->
+  <!-- <a ><button type="button" class="btn btn-primary btn-success btn-lg my-btn animated zoomIn ">Interactive Map</button></a> -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+  <!-- <h1>ok, now make a way of clicking on a button to scroll down, or link to something, or even an emmbedded panel, but the end result is: <b>we want to implement the MAP as SOON as possible! So get onto it!</b></h1> -->
+
+  <nav class="navbar navbar-inverse navbar-fixed-bottom my-footer">
+    <div class="container-fluid">
+      <p class="my-footer-text">&#169; Elliot B. G. Londt, 2017</p>
+
+    </div>
+  </nav>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
