Reverted background, fixed position.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
   <!-- other -->
 
   <title>Home | KiwiLand</title>
-
+  <style>
+    body{
+     background-image:url('img/background.jpg');
+     background-repeat: no-repeat;
+     background-size: 100%;
+     background-attachment: fixed;
+   }
+ </style>
 </head>
 
 <!-- Add a class to flag when the page is fully loaded -->
@@ -58,15 +65,15 @@
     </blockquote>
   </div>
 
-<div class="galHead">
-<p class="galHeadText">This is the KiwiLand Gallery!</p><br>
-<p class="galHeadText">Click on a picture, to see the full-resolution version!</p>
-</div>
+  <div class="galHead">
+    <p class="galHeadText">This is the KiwiLand Gallery!</p><br>
+    <p class="galHeadText">Click on a picture, to see the full-resolution version!</p>
+  </div>
   <!-- Gallery Start -->
 
   <div class="container galCont">
     <div class="row">
-    <div class="col-md-3 galCol">
+      <div class="col-md-3 galCol">
         <div class="thumbnail">
           <a href="img/nz/original/1.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/1.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
         </div>
@@ -88,7 +95,7 @@
       </div>
     </div>
     <div class="row">
-    <div class="col-md-3 galCol">
+      <div class="col-md-3 galCol">
         <div class="thumbnail">
           <a href="img/nz/original/5.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/5.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
         </div>
@@ -110,7 +117,7 @@
       </div>
     </div>
     <div class="row">
-    <div class="col-md-3 galCol">
+      <div class="col-md-3 galCol">
         <div class="thumbnail">
           <a href="img/nz/original/9.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/9.jpg" alt="NZ Photograph"  height="250" tyle="width:100%;"></a>
         </div>
@@ -132,7 +139,7 @@
       </div>
     </div>
     <div class="row">
-    <div class="col-md-3 galCol">
+      <div class="col-md-3 galCol">
         <div class="thumbnail">
           <a href="img/nz/original/13.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/13.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
         </div>
@@ -154,7 +161,7 @@
       </div>
     </div>
     <div class="row">
-    <div class="col-md-3 galCol">
+      <div class="col-md-3 galCol">
         <div class="thumbnail">
           <a href="img/nz/original/17.jpg" target="_blank"><img class="galIMG" src="img/nz/white-bars/17.jpg" alt="NZ Photograph" height="250" style="width:100%;"></a>
         </div>
@@ -175,7 +182,7 @@
         </div>
       </div>
     </div>
-</div>
+  </div>
 
 
   <!-- Gallery End -->
