--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="css/cont-bg.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/cont-bg.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- other -->
