Removal of Misc. onLoad property.

--- a/history.html
+++ b/history.html
@@ -23,7 +23,7 @@
 </head>
 
 <!-- Add a class to flag when the page is fully loaded -->
-<body onload="document.body.classList.add('loaded')"  id="history">
+<body>
 
     <div class="banner">
         <nav class="navbar navbar-default my-navbar navbar-fixed-top">
